--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "po2json",
   "description": "Convert PO files to JSON",
-  "version": "1.0.0-beta-3",
+  "version": "1.0.0-beta-4",
   "homepage": "https://github.com/mikeedwards/po2json",
   "author": {
     "name": "Joshua I. Miller",
@@ -54,11 +54,11 @@
     "node": ">=10.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
     "jed": "~1.1.1",
-    "jest": "^26.1.0",
+    "jest": "29.7.0",
     "messageformat": "^2.3.0"
   },
   "keywords": [
@@ -69,12 +69,13 @@
   ],
   "dependencies": {
     "commander": "^6.0.0",
-    "gettext-parser": "2.0.0",
+    "gettext-parser": "8.0.0",
     "gettext-to-messageformat": "0.3.1"
   },
   "peerDependencies": {
     "commander": "^6.0.0",
-    "gettext-parser": "2.0.0",
+    "gettext-parser": "8.0.0",
     "gettext-to-messageformat": "0.3.1"
-  }
+  },
+  "type": "module"
 }
